# concourse-github-webhook-resource

./: README.md  pyproject.toml
schema/: input.json
src/: in  out
